# make-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: plans.md
include/: options.h  presets.h  structure.h
presets/: c.cfg
src/: main.c  options.c  presets.c  structure.c
